Fixed alignment for 4 items in 1024px and 1280px viewport..

--- a/HexiCloud/public_html/css/hc-common.css
+++ b/HexiCloud/public_html/css/hc-common.css
@@ -65,10 +65,6 @@ navigationbarright {
     opacity: 0.5;
 }
 
-.service-item-threshold-width {
-    min-width: 280px;
-}
-
 .service-status-ready {
     border-bottom: 4px solid #FDAF64 !important;
 }
